RISC-V: UseRVV option can't be enabled after JDK-8316859

XMLWordPrintable

    • riscv
    • linux

      Because some dev boards only support RVV version 0.7, In JDK-8316859 we masked the use of HWCAP to probe for RVV extensions, and in the meantime, we can use hwprobe to probe for V extensions in Linux kernel 6.5 and above. But recently we got Banana Pi BPI-F3 board (has RVV1.0), but his kernel is 6.1.15, so the V extensions detected by HWCAP are masked. And we get the warning: RVV is not supported on this CPU when we enable UseRVV with the command, and we can't enable UseRVV correctly.

            Assignee:
            Unassigned
            Reporter:
            Gui Cao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated: