8333245: RISC-V: UseRVV option can't be enabled after JDK-8316859